# TinySrv

./: .gitignore  tinysrv.cabal
examples/: routing.hs
src/: TinySrv.hs  test.hs
src/TinySrv/: Monad.hs  ResponseCodes.hs
src/Web/: TinySrv.hs
src/Web/TinySrv/: Mime.hs  Monad.hs  ResponseCodes.hs  Types.hs
