name:                tinysrv
version:             0.1.2
synopsis:            A small monadic webserver library
license:             MIT
license-file:        LICENSE
author:              Stephan Wolski
maintainer:          me@stephanwolski.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     
    Web.TinySrv
    Web.TinySrv.Types
    Web.TinySrv.Monad

  other-modules:
    Web.TinySrv.ResponseCodes
    Web.TinySrv.Mime
  
  other-extensions:    UnicodeSyntax, ExistentialQuantification, OverloadedStrings, TypeSynonymInstances, FlexibleInstances

  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , text
                     , mtl
                     , network
                     , transformers
                     , containers
                     , base-unicode-symbols
                     , directory
                     , filepath
                     , time

  hs-source-dirs:      src

  default-language:    Haskell2010
  
